--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@font-face {
+  font-family: "Righteous";
+  src: url("/src/assets/fonts/Righteous-Regular.ttf");
+}
+@font-face {
+  font-family: "Jost";
+  src: url("/src/assets/fonts/Jost-VariableFont_wght.ttf");
+}
+@font-face {
+  font-family: "Inter";
+  src: url("/src/assets/fonts/Inter-VariableFont_slnt\,wght.ttf");
+}
+
+
 
 html,
 body,
