--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,27 @@ body,
     transform: rotate(-360deg);
   }
 }
+
+/* simple loader */
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #FFF;
+  border-bottom-color: transparent;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+  }
+
+  @keyframes rotation {
+  0% {
+      transform: rotate(0deg);
+  }
+  100% {
+      transform: rotate(360deg);
+  }
+  } 
    
 .popover{
   background-color: rgba(250, 252, 252, 0.5);
