--- a/src/index.css
+++ b/src/index.css
@@ -82,18 +82,18 @@ body,
 }
 
 /* simple loader */
-.loader {
+.loader-simple {
   width: 48px;
   height: 48px;
-  border: 5px solid #FFF;
+  border: 5px solid #166534;
   border-bottom-color: transparent;
   border-radius: 50%;
   display: inline-block;
   box-sizing: border-box;
-  animation: rotation 1s linear infinite;
+  animation: rotation-simple 1s linear infinite;
   }
 
-  @keyframes rotation {
+  @keyframes rotation-simple {
   0% {
       transform: rotate(0deg);
   }
